testdata/parser/negative/9.txt
Parse error at 9.pdl:6:3: Illegal channel delcaration
		channel yo -> yi;
		^
